# familynewsletter

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: daily-newsletter.yml
data/: chores.yaml
family_newsletter/: __init__.py
family_newsletter/app/: config.py  db.py  main.py  run_daily.py  scheduler.py
family_newsletter/app/email/: __init__.py  sender.py
family_newsletter/app/newsletter/: __init__.py  delivery.py  preview.py
family_newsletter/app/newsletter/templates/: newsletter.html.j2  newsletter.txt.j2
family_newsletter/app/sources/: __init__.py  celebrity.py  chores.py  rss.py  sports.py  weather.py
tests/: test_config.py  test_email.py  test_health.py  test_preview.py
