[project]
name = "family-newsletter"
version = "0.1.0"
description = "Local-first backend for a family morning newsletter."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

